# wyzeapy

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE.md  Pipfile  Pipfile.lock.license  README.md  SECURITY.md  camera-get_streams.csv  coverage.xml  example.py  justfile  module-docs.md  pyproject.toml  setup.cfg  sonar-project.properties  wyze-api-openapi.yaml
.github/: dependabot.yml
.github/workflows/: auto-approve.yml  auto-assign.yml  build.yml  codeql-analysis.yml  codeql.yml  dependency-review.yml  lint.yml  pre-release.yml  publish.yml  python-publish.yml  scorecard.yml  sonar-cloud-scan.yml  test.yml
.reuse/: dep5
api_docs/: openapi.yaml
coverage-reports/: coverage-latest.xml
docs/: conf.py  index.html  index.rst  search.js  wyzeapy.html
docs/api/: devices.rst  services.rst  wyzeapy.rst
docs/wyzeapy/: const.html  crypto.html  exceptions.html  index.html  payload_factory.html  services.html  types.html  utils.html  wyze_auth_lib.html
docs/wyzeapy/services/: base_service.html  bulb_service.html  camera_service.html  hms_service.html  index.html  lock_service.html  sensor_service.html  switch_service.html  thermostat_service.html  update_manager.html  wall_switch_service.html
scripts/: create_pre_release.sh  irrigation-api-methods
src/wyzeapy/: __init__.py  base_client.py  client.py  const.py  context.py  crypto.py  exceptions.py  models.py  net_client.py  net_requests.py  payload_factory.py  types.py  utils.py  wyze_api_ca.pem  wyze_auth_lib.py  wyzeapy.py
src/wyzeapy/devices/: __init__.py  base.py  camera.py  gateway.py  irrigation.py  light.py  lock.py  plug.py  thermostat.py  wall_switch.py
src/wyzeapy/services/: __init__.py  air_purifier_service.py  base_service.py  bulb_service.py  camera_service.py  garage_service.py  hms.py  hms_service.py  irrigation_service.py  lock_service.py  scale_service.py  sensor_service.py  switch_service.py  thermostat_service.py  update_manager.py  wall_switch_service.py
src/wyzeapy/tests/: test_bulb_service.py  test_camera_service.py  test_get_user.py  test_irrigation_service.py  test_lock_service.py  test_sensor_service.py  test_switch_service.py  test_wall_switch_service.py
src/wyzeapy/wyze_api_client/: __init__.py
src/wyzeapy/wyze_api_client/models/: __init__.py  device.py  device_device_params.py  device_mgmt_get_iot_prop_request.py  device_mgmt_run_action_request.py  device_mgmt_run_action_request_capabilities_item.py  device_mgmt_run_action_request_capabilities_item_name.py  device_mgmt_run_action_request_capabilities_item_properties_item.py  device_mgmt_run_action_request_target_info_type.py  disable_reme_alarm_body_remediation_id.py  get_event_list_response_200.py  get_home_favorites_request.py  get_home_favorites_response.py  get_irrigation_iot_prop_response_200.py  get_irrigation_iot_prop_response_200_data.py  get_irrigation_iot_prop_response_200_data_props.py  get_irrigation_schedule_runs_response_200.py  get_irrigation_schedule_runs_response_200_data_schedules_item.py  get_lock_ble_token_response_200_token.py  get_lock_info_with_keypad.py  get_object_list_response_data.py  get_plan_binding_list_group_id.py  get_streams_request.py  get_streams_request_device.py  get_streams_response.py  hms_profile_active_request_item.py  hms_state_status_response.py  hms_state_status_response_message.py  home_device_item.py  home_device_param.py  home_device_param_p2p.py  home_device_param_thumbnail.py  home_device_property.py  home_favorites_data.py  home_favorites_data_app_settings_item.py  home_favorites_data_device_group_list_item.py  irrigation_quick_run_request.py  irrigation_zone.py  irrigation_zone_response_data.py  lock_control_response_200.py  (+33 more)
src/wyzeapy_v2/: __init__.py  const.py  devices.py  exceptions.py  models.py  utils.py  wyzeapy.py
src/wyzeapy_v2/devices/: __init__.py  base.py  camera.py  light.py  lock.py  plug.py  sensors.py  thermostat.py  wall_switch.py
src/wyzeapy_v2/models/: device.py
src/wyzeapy_v2/services/: hms.py
src/wyzeapy_v2/tests/: test_get_user.py
tests/: __init__.py  conftest.py  test_air_purifier_service.py  test_camera_service.py  test_client.py  test_devices.py  test_hms_service.py  test_irrigation_service.py  test_lock_service.py  test_payload_factory.py  test_roku.py  test_scale_service.py  test_switch_service.py  test_thermostat_service.py  test_types.py  test_update_manager.py  test_utils.py  test_wall_switch_service.py  test_wyze_auth_lib.py  test_wyzeapy.py
(+144 files in other folders)
