[project]
name = "wyzeapy"
version = "0.5.28"
description = "A library for interacting with Wyze devices"
authors = [{name = "Katie Mulliken", email = "katie@mulliken.net"}]
license = {text = "GPL-3.0-only"}
requires-python = ">=3.11.0"
dependencies = [
    "aiohttp>=3.11.12",
    "aiodns>=3.2.0",
    "pycryptodome>=3.21.0",
]

[project.optional-dependencies]
dev = [
    "pdoc>=15.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
