[project]
name = "wyzeapy"
version = "0.6.0a2"
description = "A library for interacting with Wyze devices"
authors = [{ name = "Katie Mulliken", email = "katie@mulliken.net" }]
license = { text = "GPL-3.0-only" }
requires-python = ">=3.13.2"
readme = "README.md"
keywords = ["wyze", "smart-home", "api", "async", "iot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
  "aiohttp>=3.11.12,<4.0.0",
  "aiodns>=3.2.0,<4.0.0",
  "pycryptodome>=3.21.0,<4.0.0",
  "httpx>=0.28.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/SecKatie/wyzeapy"
Repository = "https://github.com/SecKatie/wyzeapy.git"
"Bug Tracker" = "https://github.com/SecKatie/wyzeapy/issues"

[project.optional-dependencies]
dev = [
  "ruff>=0.12.3",
  "pytest>=7.0.0,<10.0.0",
  "coverage>=7.9.2",
  "openapi-spec-validator>=0.7.2",
  "openapi-python-client>=0.28.0",
  "pytest-asyncio>=1.3.0",
  "ty>=0.0.8",
  "basedpyright>=1.37.1",
  "sphinx>=8.0.0",
  "sphinx-rtd-theme>=3.0.0",
  "sphinx-autodoc-typehints>=2.0.0",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.ty.src]
exclude = [
  "src/wyzeapy/wyze_api_client/", # Auto-generated code
  "src/wyzeapy/tests/",           # Test files
]

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
    "twine>=6.2.0",
]
