[metadata]
# replace with your username:
name = wyzeapy
version = 0.2.5
author = Mulliken LLC
author_email = joshua@mulliken.net
description = Python client for private Wyze API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JoshuaMulliken/wyzeapy
project_urls =
    Bug Tracker = https://github.com/JoshuaMulliken/wyzeapy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Freeware
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    cchardet
    aiodns
python_requires = >=3.6

[options.packages.find]
where = src