# SPDX-FileCopyrightText: 2021 Mulliken, LLC <joshua@mulliken.net>
#
# SPDX-License-Identifier: GPL-3.0-only

[metadata]
# replace with your username:
name = wyzeapy
version = 0.5.0b1
author = Mulliken LLC
author_email = joshua@mulliken.net
description = Python client for private Wyze API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JoshuaMulliken/wyzeapy
project_urls =
    Bug Tracker = https://github.com/JoshuaMulliken/wyzeapy/issues
classifiers =
    Programming Language :: Python :: 3
    Framework :: aiohttp
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    aiohttp
    cchardet
    aiodns
python_requires = >=3.6

[options.packages.find]
where = src